--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "nodemon": "nodemon index.js",
+    "tailwind": "npx tailwindcss -i ./views/styles.css -o ./dist/output.css --watch",
+    "start": "npm-run-all --parallel tailwind nodemon"
   },
   "keywords": [],
   "author": "Franc Alvenn Dela Cruz",
   "license": "ISC",
   "description": "This is a final project for the Bayan Academy - Backend 101",
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "path": "^0.12.7",
     "uuid": "^11.0.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.16"
   }
 }
