--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "method-override": "^3.0.0",
+    "mongoose": "^8.8.4",
     "path": "^0.12.7",
     "uuid": "^11.0.3"
   },
