--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "nodemon": "nodemon index.js",
     "tailwind": "npx tailwindcss -i ./views/styles.css -o ./dist/output.css --watch",
-    "start": "npm-run-all --parallel tailwind nodemon"
+    "start": "npm-run-all --parallel tailwind nodemon seeds",
+    "seeds": "node seeds/seeder.js"
   },
   "keywords": [],
   "author": "Franc Alvenn Dela Cruz",
