--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "uuid": "^11.0.3"
   },
